4390: Too many open files on q https://q.tasktop.com/alm/#projects/c2c/task/4390

--- a/site-cookbooks/cfc_server/files/default/limits.conf
+++ b/site-cookbooks/cfc_server/files/default/limits.conf
@@ -1,7 +1,7 @@
 # Managed by Chef
 # Local modifications will be overwritten by Chef.
 
-*  soft  nofile 802400
-*  hard  nofile 802400
+*  soft  nofile 1000000
+*  hard  nofile 1000000
 
 # End of file
