4445: investigate too many open files issues on Hudson containers https://q.tasktop.com/alm/#projects/c2c/task/4445

--- a/site-cookbooks/cfc_server/files/default/limits.conf
+++ b/site-cookbooks/cfc_server/files/default/limits.conf
@@ -3,5 +3,8 @@
 
 *  soft  nofile 1000000
 *  hard  nofile 1000000
+# Workaround for root user in ubuntu (affects service commands launched with init.d)
+root  soft  nofile 1000000
+root  hard  nofile 1000000
 
 # End of file
