adjust project name and path

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>code2cloud.chef</name>
+	<name>code2cloud.ops</name>
 	<comment></comment>
 	<projects>
 	</projects>
