Allow dmz to work without ssl

--- a/site-cookbooks/cfc_dmz/files/default/cfc_dmz.conf
+++ b/site-cookbooks/cfc_dmz/files/default/cfc_dmz.conf
@@ -1,4 +1,5 @@
-LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
-LogFormat "%h %{X-Forwarded-For}i %{X-Cluster-Client-Ip}i %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
-LogFormat "%h %l %u %t \"%r\" %>s %O" common
-CustomLog /var/log/apache2/other_vhosts_access.log vhost_combined
+# FIXME not supported on OL's httpd (older apache2 version?)
+#LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
+#LogFormat "%h %{X-Forwarded-For}i %{X-Cluster-Client-Ip}i %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
+#LogFormat "%h %l %u %t \"%r\" %>s %O" common
+#CustomLog /var/log/apache2/other_vhosts_access.log vhost_combined
