4875: Support building chef distributions for each environment and VM-flavour
* Single assembly
* vbox scripts

Task-URL: https://q.tasktop.com/alm/#projects/c2c/task/4875

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
 	<properties>
 		<chef.env>local</chef.env>
+		<assembly>base</assembly>
 	</properties>
 	
 	<dependencies>
@@ -55,12 +56,7 @@
 				<version>2.3</version>
 				<configuration>
 					<descriptors>
-						<descriptor>src/main/assembly/base.xml</descriptor> <!-- Used by depended projects -->
-						<descriptor>src/main/assembly/hmaster.xml</descriptor>
-						<descriptor>src/main/assembly/hslave.xml</descriptor>
-						<descriptor>src/main/assembly/hub.xml</descriptor>
-						<descriptor>src/main/assembly/scm.xml</descriptor>
-						<descriptor>src/main/assembly/taskAndWiki.xml</descriptor>
+						<descriptor>src/main/assembly/${assembly}.xml</descriptor> 
 					</descriptors>
 				</configuration>
 				<executions>
