--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
 			<version>0.10.0-c2c-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+	
+	<distributionManagement>
+		<repository>
+			<id>code2cloud-internal</id>
+			<name>Code2Cloud internal repo</name>
+			<url>https://q.tasktop.com/alm/s/c2c/maven</url>
+		</repository>
+	</distributionManagement>
 
 	<build>
 		<plugins>
@@ -69,7 +77,19 @@
 					</execution>
 				</executions>
 			</plugin>
+				<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
 		</plugins>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-webdav-jackrabbit</artifactId>
+				<version>1.0-beta-6</version>
+			</extension>
+		</extensions>
 	</build>
 
 
