Add maven repository for opscode dep

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
 		<wars.version>1.1.0-SNAPSHOT</wars.version>
 	</properties>
 	
+	<repositories>
+		<repository>
+			<id>code2cloud-internal</id>
+			<name>Code2Cloud internal repo</name>
+			<url>https://q.tasktop.com/alm/s/c2c/maven</url>
+		</repository>
+	</repositories>
+	
 	<distributionManagement>
 		<repository>
 			<id>code2cloud-internal</id>
