--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
 				</dependency>
 				<dependency>
 					<groupId>com.tasktop.c2c.server</groupId>
+					<artifactId>slave-jar</artifactId>
+					<version>${wars.version}</version>
+					<type>jar</type>
+				</dependency>
+				<dependency>
+					<groupId>com.tasktop.c2c.server</groupId>
 					<artifactId>hudson.configuration.web</artifactId>
 					<version>${wars.version}</version>
 					<type>war</type>
